migrating the in-memory logic to postgre db