@@ -1,33 +1,45 @@
 package com.copap.model;
 
-import java.util.Objects;
-import java.util.List;
 import java.time.Instant;
 import java.util.Collections;
+import java.util.List;
+import java.util.Objects;
+import java.util.concurrent.atomic.AtomicLong;
 
 
 public class Order {
     private final String orderId;
-    private final Customer customer;
-    private final List<Product> products;
+    private final String customerId;
+    private final List<String> productIds;
     private final Instant createdAt;
 
     private OrderStatus orderStatus;
+    private final AtomicLong version;
+    private double totalAmount;
 
-    public Order(String orderId, Customer customer, List<Product> products) {
+    public Order(String orderId, String customerId, List<String> productIds, double totalAmount) {
         this.orderId = Objects.requireNonNull(orderId);
-        this.customer = Objects.requireNonNull(customer);
-        this.products = Collections.unmodifiableList(products);
+        this.customerId = Objects.requireNonNull(customerId);
+        this.productIds = List.copyOf(productIds);
         this.createdAt = Instant.now();
         this.orderStatus = OrderStatus.NEW;
+        this.version = new AtomicLong(0);
+        this.totalAmount = totalAmount; // will be set externally
     }
 
     public String getOrderId() { return orderId; }
-    public Customer getCustomer() { return customer; }
-    public List<Product> getProducts() { return products; }
+    public String getCustomerId() {
+        return customerId;
+    }
+
+    public List<String> getProductIds() {
+        return productIds;
+    }
     public Instant getCreatedAt() { return createdAt; }
     public OrderStatus getStatus() { return orderStatus; }
-
+    public long getVersion() {
+        return version.get();
+    }
     // since state-transitions must be atomic, hence it is being coverted into synchronized
     public synchronized void updateStatus(OrderStatus newStatus) {
         if (!OrderStateMachine.canTransition(this.orderStatus, newStatus)) {
@@ -40,9 +52,22 @@ public class Order {
 
 
     public double totalAmount() {
-        return products.stream()
-                .mapToDouble(Product::getPrice)
-                .sum();
+        return totalAmount;
+    }
+
+    public static Order fromDb(
+            String orderId,
+            OrderStatus status,
+            String customerId,
+            List<String> productIds,
+            double totalAmount,
+            long version
+    ) {
+        Order order = new Order(orderId, customerId, productIds, totalAmount);
+        order.orderStatus = status;
+        order.version.set(version);
+        order.totalAmount = totalAmount;
+        return order;
     }
 
     @Override
